syntax = "proto3";

service PaxosNodeService {
    rpc Prepare(PrepareRequest) returns (PrepareResponse);
    rpc Accept(AcceptRequest) returns (AcceptResponse);
    rpc Accepted(AcceptedRequest) returns (AcceptedResponse);
}

message PrepareRequest {
    int32 id = 1;
    int32 roundId = 2;
}

message PrepareResponse {
    int32 id = 1;

    bool ok = 2;

    int32 lastPromisedRoundId = 3; // ok = false
    int32 lastPromisedNodeId = 4; // ok = false FIXME: not used
    
    int32 acceptedRoundId = 5; // ok = true
    int32 acceptedNodeId = 6; // ok = true
    repeated Lease acceptedValue = 7; // ok = true
}

message AcceptRequest {
    int32 id = 1;
    int32 roundId = 2;
    string value = 3;
}

message AcceptResponse {
    int32 id = 1;
    bool ok = 2;
    int32 lastPromisedRoundId = 3; // ok = false
}

message AcceptedRequest {
    int32 id = 1;
    int32 roundId = 2;
    string value = 3;
}

message AcceptedResponse {
    int32 id = 1;
    int32 roundId = 2;
    bool ok = 3;
}

message Lease {
    string clientId = 1;
    repeated string dataKeys = 2;
}
