syntax = "proto3";

service TransactionManagerService {
    // RPC for exchanging control messages with other lease managers
    rpc ControlTM(ControlTMRequest) returns (ControlTMResponse);
}

message ControlTMRequest {
    // Unique identifier for the request
    string tm_id = 1;
}

message ControlTMResponse {
    // Acknowledgment of request reception
    string tm_id = 1;
}